# M3

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
m3-r/: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md
m3-r/R/: attribute.R  augment.R  basilisk.R  convert.R  data.R  dataset.R  m3-package.R  model.R  predict.R  project.R  readouts.R  runtime.R  train.R
m3-r/inst/python/: _r_api.py
m3-r/inst/python/m3/: _bridge.py  _concat.py  _model.py
m3-r/inst/python/m3/_engine/: feature_selection.py  patient_prediction.py  reclassify.py  run_M3.py  train.py  util.py
m3-r/inst/python/m3/datasets/: _loaders.py
m3-r/inst/tutorials/: 01_representation_learning.Rmd  02_patient_prediction.Rmd  03_attribution.Rmd  04_augmentation.Rmd
m3-r/inst/tutorials/demo/: 01_representation_learning.Rmd  02_patient_prediction.Rmd  03_attribution.Rmd  04_augmentation.Rmd
m3-r/man/: dot-as_m3_parts.Rd  dot-m3_backend.Rd  dot-m3_call.Rd  dot-m3_proc.Rd  dot-pkg_py.Rd  m3-package.Rd  m3_attach.Rd  m3_attribute.Rd  m3_attribution_matrix.Rd  m3_augment.Rd  m3_capabilities.Rd  m3_cell_metadata.Rd  m3_concat.Rd  m3_dataset.Rd  m3_dataset_matrix.Rd  m3_dataset_obs.Rd  m3_demo.Rd  m3_donor_embedding.Rd  m3_embedding.Rd  m3_example_sce.Rd  m3_gene_celltype_matrix.Rd  m3_generate.Rd  m3_pca2.Rd  m3_predict_donors.Rd  m3_read_h5.Rd  m3_read_h5ad.Rd  m3_reconstruct.Rd  m3_reference_vocab.Rd  m3_shutdown.Rd  m3_top_celltypes.Rd  m3_top_genes.Rd  m3_train.Rd  m3_umap.Rd
m3-r/tests/: testthat.R
m3-r/tests/testthat/: helper-skip.R  test-convert.R  test-engine.R  test-objects.R
src/m3/: __init__.py  _bridge.py  _dataset.py  _model.py  io.py
src/m3/_engine/: __init__.py  feature_selection.py  model.py  nn.py  patient_prediction.py  simulation.py
src/m3/datasets/: __init__.py
tests/: test_anndata.py  test_augment_batch.py  test_concat.py  test_construction_contract.py  test_dataset.py  test_marshal_roundtrip.py  test_package.py  test_pipeline_smoke.py  test_read_h5.py  test_read_matrix.py  test_top_genes.py  test_train_defaults.py  test_validation.py
website/: .gitignore  README.md  mkdocs.yml  requirements-docs.txt
website/colab/: py_01_representation_learning.ipynb  py_02_patient_prediction.ipynb  py_03_attribution.ipynb  py_04_augmentation.ipynb  r_01_representation_learning.ipynb  r_02_patient_prediction.ipynb  r_03_attribution.ipynb  r_04_augmentation.ipynb
website/docs/: api-python.md  api-r.md  faq.md  index.md  installation.md  overview.md  quickstart.md
website/docs/includes/: abbreviations.md
website/docs/javascripts/: animations.js
website/docs/notebooks/: py_01_representation_learning.ipynb  py_02_patient_prediction.ipynb  py_03_attribution.ipynb  py_04_augmentation.ipynb  r_01_representation_learning.md  r_02_patient_prediction.md  r_03_attribution.md  r_04_augmentation.md
website/docs/stylesheets/: extra.css
website/overrides/: 404.html  main.html
website/tools/: gen_colab_notebooks.py  trim_epoch_logs.py
