[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m3-sc"
version = "0.3.0.dev0"
description = "Multimodal, multi-batch, condition-aware single-cell model with donor-level disease prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "anndata",
    "h5py",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/m3"]

[tool.hatch.build.targets.sdist]
include = ["/src/m3", "/tests", "/README.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
extend-exclude = ["src/m3/_engine"]
